[tool.poetry]
name = "debug_api"
version = "0.1.0"
description = ""
authors = ["ysku <yusuke1581@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.782"
isort = "^5.3.0"
autoflake = "^1.3.1"
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
